<resources>

    <string-array name="prgnameList">
        <item>"January"</item>
        <item>"February"</item>
        <item>"March"</item>
        <item>"April"</item>
        <item>"May"</item>
        <item>"June"</item>
        <item>"July"</item>
        <item>"August"</item>
        <item>"September"</item>
        <item>"October"</item>
        <item>"November"</item>
        <item>"December"</item>
    </string-array>
    <string-array name="tabs">
        <item>"Tab1"</item>
        <item>"Tab2"</item>
        <item>"Tab3"</item>
    </string-array>

    <string name="app_name">PurposeBuilt</string>
    <string name="action_settings">Settings</string>
    <string name="Password">Password</string>
    <string name="userName">User Name</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="angel">desc</string>
    <string name="title_activity_navigation">Navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_navi">Navi</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="this_is_page_number_1">This is Page number 1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
